syntax = "proto3";
package Message;
option java_package = "game.proto.back";
option optimize_for = SPEED;
option java_multiple_files = true;
// 后端需要的数据
message PlayerBackData {
    int64 fightTime = 1;
    repeated int32 fightArea = 2;
    int64 powerRecoverTime = 3;
    int64 createTime = 4;
    int64 loginTime = 5;
    int64 updateTime = 6;
}
